# The-Ledger

./: .gitignore  README.md  pyproject.toml
db/: schema.sql
docs/: DESIGN.md  DOMAIN_NOTES.md
src/aggregates/: loan_application.py
src/commands/: handlers.py
src/integrity/: gas_town.py
src/mcp/: resources.py  server.py  tools.py
src/models/: events.py
src/projections/: agent_performance.py  compliance_audit.py  daemon.py
tests/: test_gas_town.py  test_mcp_lifecycle.py  test_projections.py  test_upcasting.py
